"""MODULE.bazel"""

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.15.2")

# Choose the most recent version available at
# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")
