# Builds the libraries and executables for the repository.

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "play_bongo",
    srcs = ["play_bongo.cc"],
    data = [
        "//data:bongo_board.txt",
        "//data:bongo_tiles.txt",
    ],
    deps = [
        "//src/bongo:dict",
        "//src/bongo:gamestate",
        "//src/bongo:solver",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_binary(
    name = "play_pile_up_poker",
    srcs = ["play_pile_up_poker.cc"],
    data = [
        "//data:pile_up_poker_cards.txt",
    ],
    deps = [
        "//src/pileuppoker:pile_up_poker_solver",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
    ],
)

cc_binary(
    name = "play_spelltower",
    srcs = ["play_spelltower.cc"],
    data = [
        "//data:spelltower_board.txt",
    ],
    deps = [
        "//src/spelltower:solver",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_binary(
    name = "play_typeshift",
    srcs = ["play_typeshift.cc"],
    data = [
        "//data:typeshift_board.txt",
    ],
    deps = [
        "//src/shared:dictionary_utils",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)
