# Classes used in finding a solution for Bongo.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dict",
    srcs = ["dict.cc"],
    hdrs = ["dict.h"],
    data = [
        "//data:words_bongo.txt",
        "//data:words_bongo_common.txt",
    ],
    deps = [
        "//src/shared:letter_count",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@re2",
    ],
)

cc_test(
    name = "dict_test",
    size = "small",
    srcs = ["dict_test.cc"],
    deps = [
        ":dict",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "gamestate",
    srcs = ["gamestate.cc"],
    hdrs = ["gamestate.h"],
    deps = [
        "//src/shared:letter_count",
        "//src/shared:point",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "gamestate_test",
    size = "small",
    srcs = ["gamestate_test.cc"],
    deps = [
        ":gamestate",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "solver",
    srcs = ["solver.cc"],
    hdrs = ["solver.h"],
    deps = [
        ":dict",
        ":gamestate",
        "//src/shared:dictionary_utils",
        "//src/shared:letter_count",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)
