# Classes used in finding a solution for Spelltower.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dict",
    srcs = ["dict.cc"],
    hdrs = ["dict.h"],
    data = [
        "//data:words_puzzmo.txt",
    ],
    deps = [
        ":trie",
        "//src/shared:letter_count",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/strings",
        "@re2",
    ],
)

cc_test(
    name = "dict_test",
    size = "small",
    srcs = ["dict_test.cc"],
    deps = [
        ":dict",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "grid",
    srcs = ["grid.cc"],
    hdrs = ["grid.h"],
    deps = [
        ":path",
        ":tile",
        "//src/shared:letter_count",
        "//src/shared:point",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status:status",
    ],
)

cc_test(
    name = "grid_test",
    size = "small",
    srcs = ["grid_test.cc"],
    deps = [
        ":grid",
        "//src/shared:letter_count",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "path",
    srcs = ["path.cc"],
    hdrs = ["path.h"],
    deps = [
        ":tile",
        "//src/shared:point",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "path_test",
    size = "small",
    srcs = ["path_test.cc"],
    deps = [
        ":path",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "solver",
    srcs = ["solver.cc"],
    hdrs = ["solver.h"],
    deps = [
        ":dict",
        ":grid",
        ":path",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "solver_test",
    size = "small",
    srcs = ["solver_test.cc"],
    deps = [
        ":solver",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "tile",
    srcs = ["tile.cc"],
    hdrs = ["tile.h"],
    deps = [
        "//src/shared:point",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_test(
    name = "tile_test",
    size = "small",
    srcs = ["tile_test.cc"],
    deps = [
        ":tile",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "trie",
    srcs = ["trie.cc"],
    hdrs = ["trie.h"],
    data = [
        "//data:serialized_trie.txt",
    ],
    deps = [
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "trie_test",
    size = "small",
    srcs = ["trie_test.cc"],
    deps = [
        ":trie",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

##############

cc_library(
    name = "spelltower_board",
    srcs = ["spelltower_board.cc"],
    hdrs = ["spelltower_board.h"],
    deps = [
        ":spelltower_path",
        "//src/shared:letter_count",
        "//src/shared:point",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "spelltower_board_test",
    size = "small",
    srcs = ["spelltower_board_test.cc"],
    deps = [
        ":spelltower_board",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "spelltower_path",
    srcs = ["spelltower_path.cc"],
    hdrs = ["spelltower_path.h"],
    deps = [
        "//src/shared:point",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "spelltower_path_test",
    size = "small",
    srcs = ["spelltower_path_test.cc"],
    deps = [
        ":spelltower_path",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "spelltower_solver",
    srcs = ["spelltower_solver.cc"],
    hdrs = ["spelltower_solver.h"],
    deps = [
        ":spelltower_board",
        "//src/shared:dictionary_utils",
        "//src/shared:point",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log",
        "@re2",
    ],
)
